hphp/hack/test/typecheck/shape_key_exists8.php.exp
File "shape_key_exists8.php", line 6, characters 30-35:
Was expecting a constant string, class constant, or int (for shape access) (Typing[4051])
