hphp/hack/test/typecheck/shape_key_exists8.php
<?hh

// Non-literal index

function test(string $index): void {
  Shapes::keyExists(shape(), $index);
}
